# Micronano

./: .gitignore  CMakeLists.txt
include/cli/: cli_args.h
include/core/: bytes_manage.h  bytes_manager.h  file_manager.h  huffman.h  huffman_api.h  huffman_internal.h  logger.h  types_errors.h  utils.h
src/cli/: cli_args.c
src/core/: bytes_manage.c  bytes_manager.c  file_manager.c  huffman.c  huffman_api.c  huffman_decoder.c  huffman_encoder.c  logger.c  main.c  utils.c
tests/: test_bytes_manage.c  test_bytes_manager.c  test_file_manager.c  test_helpers.c  test_helpers.h  test_huffman.c  test_huffman_encoder.c  test_logger.c
